# HOBB

./: .env  LICENSE  README.md  pyproject.toml
app/: database.py  main.py  models.py  oauth2.py  schemas.py  settings.py  utils.py
app/cryptography/: __init__.py  encrypt.py  steg.py
app/cryptography/algorithms/: AES.py  Serpent.py  Twofish.py
app/routers/: auth.py  encdec.py  user.py
app/templates/: index.html
