[tool.poetry]
name = "hobb"
version = "0.1.0"
description = "Unified Cryptography Platform"
authors = ["Aadithya Sai <aadithyas0610@gmail.com>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
jinja2 = "^3.1.4"
python-multipart = "^0.0.10"
pycryptodome = "^3.21.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
