[tool.poetry]
name = "hobb"
version = "0.1.0"
description = "Unified Cryptography Platform"
authors = ["Aadithya Sai <aadithyas0610@gmail.com>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
jinja2 = "^3.1.4"
python-multipart = "^0.0.10"
opencv-python = "^4.10.0.84"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
